--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,11 +25,20 @@
         android:onClick="click_get_state"/>
 
     <Button
+        android:id="@+id/check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/state"
         app:layout_constraintTop_toTopOf="parent"
         android:text="check"
         android:onClick="click_check"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/check"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="download"
+        android:onClick="click_download"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
